@@ -1,4 +1,7 @@
         - Convert repository to git (fREW Schmidt)
+        - Depend on Catalyst 5.8 and so lose un-declared dependencies
+          on Class::Data::Inheritable and Class::Accessor::Fast.
+          RT#74972
 
 0.10
         - Change to Module::Install
